--- a/HW_Trees.ipynb
+++ b/HW_Trees.ipynb
@@ -313,7 +313,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#YOUR_CODE\n"
+    "submission = pd.DataFrame(columns = ["Id", "Expected"])\n",
+    "submission["Id"] = test["Id"]\n",
+    "submission["Expected"] = #YOUR CODE\n"
+    "submission.to_csv('submission.csv', index=False)\n"
    ],
    "metadata": {
     "collapsed": false,
