--- a/HW_Trees.ipynb
+++ b/HW_Trees.ipynb
@@ -315,7 +315,7 @@
    "source": [
     "submission = pd.DataFrame(columns = [\"Id\", \"Expected\"])\n",
     "submission[\"Id\"] = test[\"Id\"]\n",
-    "submission[\"Expected\"] = #YOUR CODE\n"
+    "submission[\"Expected\"] = #YOUR CODE\n",
     "submission.to_csv('submission.csv', index=False)\n"
    ],
    "metadata": {
