--- a/HW_EDA.ipynb
+++ b/HW_EDA.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Pазмер датасета covid без NaN {YOUR_CODE}')"
+    "print(f'Pазмер датасета hr без NaN {YOUR_CODE}')"
    ]
   },
   {
