Add discrete points to tasks

--- a/HW_EDA.ipynb
+++ b/HW_EDA.ipynb
@@ -27,6 +27,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Задание 1 (0.5 балла)\n",
+    "\n",
     "Для начала работы нам необходимо научиться читать набор данных. В данном домашнем задании мы поработаем с двумя наборами данных.\n",
     "\n",
     "__covid.csv__ ([источник](https://www.kaggle.com/gpreda/covid-world-vaccination-progress)) - статистика по вакцинированию от COVID19 по разным странам. Для данного датасета нет конкретной предсказательной переменной.\n",
@@ -78,7 +80,7 @@
    "source": [
     "## EDA\n",
     "\n",
-    "### Задание"
+    "### Задание 2 (3.5 балла)"
    ]
   },
   {
@@ -95,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.\n",
+    "#### 1. (0.5 балла)\n",
     "\n",
     "Для числовых признаков постройте распределения признаков. Для категориальных признаков выведите статистику по количеству значений признака."
    ]
@@ -113,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.\n",
+    "#### 2. (0.5 балла)\n",
     "Удалите все строки, где есть хотя бы одно пропущенное значение признака. Насколько сильно уменьшился размер датасета? Как изменились распределения признаков/статистика по количеству значений признаков?"
    ]
   },
@@ -162,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.\n",
+    "#### 3.  (1 балл)\n",
     "Для числовых признаков заполните пропущенные данные средним/медианой/модой данного признака. Объясните свой выбор. (Часть строк с NaN значениями можно удалить, если размер датасета уменьшится <15%)"
    ]
   },
@@ -170,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.\n",
+    "#### 4.  (1 балл)\n",
     "Для категориальных признаков заполните пропущенные значения самой встречающейся категорией или создайте отдельную категорию пропущенных значений. Объясните свой выбор. (Часть строк с NaN значениями можно удалить, если размер датасета уменьшится <15%)"
    ]
   },
@@ -205,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. \n",
+    "#### 5.  (0.5 балла)\n",
     "Как изменились распределения признаков/статистика по количеству значений признаков после заполнения пропущенных данных?"
    ]
   },
@@ -229,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание\n",
+    "### Задание 3  (1 балл)\n",
     "\n",
     "Выполните задание для датасета _covid_.\n",
     "\n",
@@ -258,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание \n",
+    "### Задание  4 (0.5 балла)\n",
     "Выполните задание для датасета _hr_.\n",
     "\n",
     "Есть ли в данных выбросы? Если да, то скажите, какие и почему Вы считаете их выбросами?\n"
@@ -284,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание \n",
+    "### Задание  5 (1 балл)\n",
     "Выполните задание для датасета _hr_.\n",
     "\n",
     "Закодируйте категориальные признаки при помощи One-hot encoding/Label encoding/Frequency encoding. Объясните свой выбор. (Обратите внимание, что некоторые категориальные признаки предполагают ранжирование в своих значениях)\n"
@@ -321,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание \n",
+    "### Задание  5 (1 балл)\n",
     "Выполните задание для датасета _hr_.\n",
     "\n",
     "\n"
@@ -331,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. \n",
+    "#### 1.  (1 балл)\n",
     "Реализуйте функцию undersampling"
    ]
   },
@@ -339,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. \n",
+    "#### 2.  (1 балл)\n",
     "Реализуйте функцию oversampling"
    ]
   },
@@ -373,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. \n",
+    "#### 3.  (1 балл)\n",
     "Используйте _SMOTE_ для балансировки датасета."
    ]
   },
@@ -411,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.\n",
+    "#### 4. (0.5 балла)\n",
     "Как изменились распределения признаков при различных тактиках балансирования датасета?"
    ]
   },
@@ -434,7 +436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
